fixed overflow

--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -36,10 +36,6 @@
   opacity: 1; }
 
 * {
-  outline: 1px red solid !important;
-  visibility: visible !important; }
-
-* {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
