--- a/jaimewebdev.com/sass/_base.scss
+++ b/jaimewebdev.com/sass/_base.scss
@@ -1,8 +1,8 @@
 //it outline all the elements to find overflow elements
-* { 
-    outline: 1px red solid !important; 
-    visibility: visible !important 
-}
+// * { 
+//     outline: 1px red solid !important; 
+//     visibility: visible !important 
+// }
 
 * {
     margin: 0;
